--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,16 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+         
+   <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/rmartinsanta/themis</url>
+    </repository>
+  </distributionManagement>
+
+
 
     <dependencies>
         <dependency>
